- Add `NewGRF.grfid_value` property.
- Pass grf as an argument to `Vehicle._set_callbacks`.
- Allow `visual_effect_and_powered` for `Train` articulated parts.
- Don't check for sprite type when adding it for now (messes up decompiling).
- Use setuptools-git-versioning to manage versions.
- Update documentation.
- Allow to use objects with id as a variant_group value in Aciton0.

- lib: Rename `kmhishph` method to `kmhish` in `Train` and `RoadVehicle`.
- lib: Make `_set_callbacks` return list of sprites to allow adding graphics.
- lib: Make auto-articulated parts use auto-assigned(string) IDs.
- lib: Fix RoadVehicle name.
- lib: Fix `CallbackManager` exceptions.
- lib: Fix incorect livery for `Train` wagons.
- lib: Add `VehicleGroup` class to define vehicle groups in `SetPurchaseOrder`.
- lib: Add `length` property to a `Train` constructor, auto-articulate if > 8 (up to 24).
- lib: Add `length` property to `RoadVehicle` constructor (1..8).
- lib: Add `purchase_sprite` property to `Train` and `RoadVehicle`.
- lib: Allow to use length > 8 (but <= 24) for articulated parts.
- lib: Allow specifying property callbacks individually in `CallbackManager`.
- lib: Add `SetPurchaseOrder` sprite generator.
- lib: Rename `POWERED_WAGONS` callback to `VISUAL_EFFECT_AND_POWERED`.
- lib: Allow to use `StringRef` as a livery name.
- lib: Add `_set_articulated_part_callbacks` method to `Train`.

- vox: Fix vox house example.
- vox: Experimental .vox renderer for trains.

---------
0.2.1
---------

- Fix: Add articulated callback to purchase chain as well.
- Fix: Don't write data for same real sprite object multiple times.
- Fix incorrect encoding of empty sprite.
- Fix duplicating actions that were added to grf manually.
- Fix `Label` value validation.
- Fix error in action generator for vehicle name.
- Fix compilation for `railtype_table`, `lang_genders` and `lang_cases` global vars.
- Fix vox house example.

- Allow specifying fallbacks in the railtype table.