@@ -29,6 +29,7 @@
 - Use setuptools-git-versioning to manage versions.
 - Update documentation.
 - Allow to use objects with id as a variant_group value in Aciton0.
+- Use IDProperty for `sort_purchase_list` in Action 0 for vehicles.
 
 - lib: Rename `kmhishph` method to `kmhish` in `Train` and `RoadVehicle`.
 - lib: Make `_set_callbacks` return list of sprites to allow adding graphics.
